# rayTracing

./: .gitignore  CMakelists.txt  README.md  conanfile.py  conanfile.txt  x.sh
examples/: CMakeLists.txt  cli.c  cli.h  demo.c  main.c
include/: algo.h  config.h  fileio.h  raytracer.h  rt_material.h  rt_types.h
include/brdf/: brdf.h
include/bvh/: bvh.h  bvh_ops.h
include/camera/: camera.h  camera_ops.h
include/sample/: accumulator.h  sampler.h
interface/include/: logger.h
interface/src/: logger.c
internal/include/: cli.h  config.h  fileio.h  raytracer.h
internal/src/: cli.c  fileio.c  main.c  raytracer.c
scripts/: download_assets.py
src/: algo.c  fileio.c  raytracer.c  rt_material.c
src/brdf/: brdf.c  brdf_cook_torrance.c  brdf_lambert.c
src/bvh/: bvh.c
src/bvh/bvh_algo/: bvh_med.c
src/camera/: camera.c
src/camera/projections/: eyefish.c  orthographic.c  orthographic_dof.c  perspective.c  perspective_dof.c  spherical.c
src/sample/: accumulator_average.c  sampler_jittered.c  sampler_random.c  sampler_regular.c
